main 2 section created

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+
+    <!-----header section start------>
     <header id="head-main">
         <section class="container cover">
             <div class="head-left">
@@ -27,11 +29,58 @@
                 <img src="Flower Asset/pngwing 10.png" alt="cover flower image" />
             </div>
         </section>
-
     </header>
+    <!-----header section end------>
+
 
     <main>
+        <section id="featured-flowers" class="container">
+            <div class="featured-title">
+                <h3>Our Featured Flowers</h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+            </div>
 
+            <div class="flowers">
+                <div class="featured-flowers">
+                    <div class="flower-1">
+                        <img style="width: 310px; height: 400px;" src="Flower Asset/pngwing 6.png"
+                            alt="first flower picture">
+                    </div>
+                    <p>Pink Flower Tree</p>
+                </div>
+
+                <div class="featured-flowers">
+                    <div class="flower-2">
+                        <img style="width: 310px; height: 400px;" src="Flower Asset/pngwing 5.png"
+                            alt="first flower picture">
+                    </div>
+                    <p>Pink Flower Tree</p>
+                </div>
+
+                <div class="featured-flowers">
+                    <div class="flower-3">
+                        <img style="width: 310px; height: 400px;" src="Flower Asset/pngwing 7.png"
+                            alt="first flower picture">
+                    </div>
+                    <p>Pink Flower Tree</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="hot-deal-section">
+            <div class="container hot-deal">
+                <div class="hot-deal-left">
+                    <h2>Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h2>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                    <button>Sign Up</button>
+                </div>
+                <div class="hot-deal-right">
+                    <img src="Flower Asset/pngwing 8.png" alt="cover flower image" />
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
