2 more sections done

--- a/index.html
+++ b/index.html
@@ -81,6 +81,61 @@
                 </div>
             </div>
         </section>
+
+
+        <section id="featured-flowers" class="container">
+            <div class="featured-title">
+                <h3>Instagram</h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+
+            <div class="flowers">
+                <div class="featured-flowers">
+                    <div class="">
+                        <img style="width: 310px; height: 400px;" src="Flower Asset/Flower 01.png"
+                            alt="first flower picture">
+                    </div>
+                </div>
+
+                <div class="featured-flowers">
+                    <div class="">
+                        <img style="width: 310px; height: 400px;" src="Flower Asset/Rectangle 4.png"
+                            alt="first flower picture">
+                    </div>
+                </div>
+
+                <div class="featured-flowers">
+                    <div class="">
+                        <img style="width: 310px; height: 400px;" src="Flower Asset/Rectangle 5.png"
+                            alt="first flower picture">
+                    </div>
+                </div>
+
+                <div class="featured-flowers">
+                    <div class="">
+                        <img style="width: 310px; height: 400px;" src="Flower Asset/Rectangle 6.png"
+                            alt="first flower picture">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section id="newsletter" class="container">
+            
+            <div class="flowers">
+                <div class="form">
+                    <div class="newsletter-title">
+                        <h3>Get The Latest Deals</h3>
+                        <p>$30 coupon for first shopping</p>
+                        <div class="input-area">
+                            <input type="email" placeholder="Enter Your Email Here..." name="email" id="">
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
