--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         <section id="featured-flowers" class="container">
             <div class="featured-title">
                 <h3>Instagram</h3>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
             </div>
 
             <div class="flowers">
@@ -122,7 +123,7 @@
 
 
         <section id="newsletter" class="container">
-            
+
             <div class="flowers">
                 <div class="form">
                     <div class="newsletter-title">
@@ -139,7 +140,13 @@
     </main>
 
     <footer>
+        <div class="featured-title footer-text">
+            <h2>Flower<span style="color:#E55473">Shop</span></h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</p>
 
+            <p style="color: rgba(255, 255, 255, 0.40);">@2020-2023, FlowerShop.com. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 
