completed full work

--- a/index.html
+++ b/index.html
@@ -121,6 +121,51 @@
             </div>
         </section>
 
+        <section id="customized-section">
+            <div class="container hot-deal">
+                <div class="customized-img">
+                    <img style="width: 450px; height: 650px; border-radius: 10px;" src="Flower Asset/flower-bucket.jpg"
+                        alt="cover flower image" />
+                </div>
+
+                <div class="form-area">
+                    <h2>Customize Your Flower Bouquet For <span style="color: #E55473;">Special Occation</span></h2>
+                    <p>Fillup the following form to let us know your requirements!</p>
+                    <form>
+                        <fieldset>
+                            <legend>Customize your dreamy bouquet</legend>
+                            <input type="text" name="name" id="name" placeholder="Enter your name">
+                            <input type="number" name="phone" id="phone" placeholder="Enter your contact number"><br>
+                            <label>Select a color that you want to prioratize on your bouquet<input type="color" name=""
+                                    id=""></label>
+                            <br>
+                            <label for="cars">Choose the Occassion :</label><br>
+                            <select name="occassion" id="">
+                                <option value="Wedding" type="checkbox">Wedding</option>
+                                <option value="Aniversary">Aniversary</option>
+                                <option value="Birthday">Birthday</option>
+                                <option value="Valentines">Valentines Day</option>
+                                <option value="Other">Other</option>
+                            </select>
+                            <br>
+                            <label>Choose the flowers you want :</label><br>
+                            <label><input type="checkbox" name="rose" id="">Rose</label>
+                            <label><input type="checkbox" name="tulip" id="">Tulip</label>
+                            <label><input type="checkbox" name="peony" id="">Peony</label>
+                            <label><input type="checkbox" name="carnation" id="">Carnation</label>
+                            <label><input type="checkbox" name="orchid" id="">Orchid</label>
+                            <br>
+                            <label>Write a beautiful note with the bouquet for the reciever :</label><br>
+                            <textarea rows="6" cols="80"></textarea>
+                        </fieldset>
+                        <button>Submit</button>
+                    </form>
+
+                </div>
+
+            </div>
+        </section>
+
 
         <section id="newsletter" class="container">
 
